test/scc/pp/errors/031.a
031.t:1:11: error: missing ':' in expression